# simple-solana-geyser-plugin

./: Cargo.toml  README.md  config.json  rust-toolchain.toml
src/: config.rs  lib.rs  publisher.rs
