[package]
name = "simple-solana-geyser-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
agave-geyser-plugin-interface = "=2.2.1"
solana-account-decoder = "=2.2.1"
solana-logger = "=2.2.1"
solana-sdk = "=2.2.1"

redis = { version = "0.32.4", features = ["aio", "tokio-comp"] }
tokio = { version = "1.46.1", features = ["full"] }

log = "0.4"
env_logger = "0.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base58 = "0.2.0"
